--- a/taskpane.html
+++ b/taskpane.html
@@ -1,4 +1,4 @@
-const taskpaneHtml = `<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -24,4 +24,4 @@ const taskpaneHtml = `<!DOCTYPE html>
   <button id="confirmSend">Evet, Gönder</button>
   <button id="cancelSend">Hayır</button>
 </body>
-</html>`;
+</html>
