--- a/taskpane.html
+++ b/taskpane.html
@@ -2,8 +2,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Onay Ekranı</title>
+  <title>Send Confirmation</title>
   <script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
+  <style>
+    body { font-family: sans-serif; padding: 20px; text-align: center; }
+    h3 { margin-bottom: 20px; }
+    button {
+      margin: 10px;
+      padding: 10px 25px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <h3>Bu e-postayı göndermek istediğinize emin misiniz?</h3>
+  <button id="confirmSend">Evet, Gönder</button>
+  <button id="cancelSend">Hayır</button>
+
   <script>
     Office.initialize = function () {
       document.getElementById("confirmSend").onclick = function () {
@@ -14,14 +30,5 @@
       };
     };
   </script>
-  <style>
-    body { font-family: sans-serif; padding: 20px; }
-    button { margin: 10px; padding: 10px 20px; }
-  </style>
-</head>
-<body>
-  <h3>Bu e-postayı göndermek istediğinize emin misiniz?</h3>
-  <button id="confirmSend">Evet, Gönder</button>
-  <button id="cancelSend">Hayır</button>
 </body>
 </html>
