--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; URL='taskpane.html'" />
-  </head>
-  <body></body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Redirecting...</title>
+  <script>
+    // Outlook iframe içinde güvenli yönlendirme
+    window.location.replace("taskpane.html");
+  </script>
+</head>
+<body>
+  <p>Yönlendiriliyor...</p>
+</body>
 </html>
