--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Redirecting...</title>
   <script>
     // Outlook iframe içinde güvenli yönlendirme
-    window.location.replace("https://mailaddins.rebul.com/taskpane.html");
+    window.location.replace("https://outlook-send-confirmation.vercel.app/taskpane.html");
   </script>
 </head>
 <body>
